--- a/services/notification/src/main/resources/application.properties
+++ b/services/notification/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 access.key=96GcWB8a
 logging.file.name=logs/notification.log
-tg.username=@checkdev_bot
-tg.token=6339059467:AAFDt4a4_aBNQe3oMl382J285WDfJWlnkQs
+tg.username=@checkdev_mock_bot
+tg.token=6626598881:AAFeHFhAp-2qnA73avXk3vXlwc5R2DGjPvQ
 server.auth=http://localhost:9900
 server.site.url.login=http://localhost:8080/login
 spring.liquibase.change-log=classpath:db/db.changelog-master.xml
