4. Spring boot + Kafka [#505039]

--- a/services/notification/src/main/resources/application.properties
+++ b/services/notification/src/main/resources/application.properties
@@ -23,3 +23,10 @@ tg.token=6339059467:AAFDt4a4_aBNQe3oMl382J285WDfJWlnkQs
 server.auth=http://localhost:9900
 server.site.url.login=http://localhost:8080/login
 spring.liquibase.change-log=classpath:db/db.changelog-master.xml
+
+spring.kafka.consumer.bootstrap-servers: localhost:9092
+spring.kafka.consumer.group-id: group-id
+spring.kafka.consumer.auto-offset-reset: earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
