--- a/services/site/pom.xml
+++ b/services/site/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>font-awesome</artifactId>
             <version>6.3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
