--- a/services/site/src/main/resources/application.properties
+++ b/services/site/src/main/resources/application.properties
@@ -26,3 +26,6 @@ server.site.contentTypeFile=image/jpeg
 #Данные для работы с сервисом MOCK
 service.mock = http://localhost:9912
 
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
